--- a/index.html
+++ b/index.html
@@ -4,20 +4,44 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Bootstrap Freelancer</title>
+        <!-- Title -->
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
             rel="stylesheet"
             integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
             crossorigin="anonymous">
+        <!-- Bootstrap -->
         <link rel="stylesheet" href="./assets/css/style.css">
+        <!-- CSS -->
     </head>
     <body>
         <header>
-
+            <div class="row nav_bar"></div>
         </header>
 
         <main>
+            <section>
+                <div class="container-fluid container_start">
+                    <div class="row">
+                        <div class="col-12"></div>
+                    </div>
+                </div>
+            </section>
 
+            <section>
+                <div class="container-fluid container_portfolio">
+                    <div class="row">
+                        <div class="col-sm-12"></div>
+                        <div class="col-sm-12"></div>
+                        <div class="col-sm-12"></div>
+                        <div class="col-sm-12"></div>
+                        <div class="col-sm-12"></div>
+                        <div class="col-sm-12"></div>
+                    </div>
+                </div>
+            </section>
+            <section></section>
+            <section></section>
         </main>
 
         <footer>
