--- a/index.html
+++ b/index.html
@@ -21,22 +21,38 @@
 
         <main>
             <section>
-                <div class="container-fluid container_start">
-                    <div class="row">
-                        <div class="col-12"></div>
+                <div
+                    class="container-fluid container_start g-0">
+                    <div class="row g-0">
+                        <div class="col-12">
+                            <div class="card-body img_start col-12">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
 
             <section>
                 <div class="container-fluid container_portfolio">
-                    <div class="row">
-                        <div class="col-sm-12"></div>
-                        <div class="col-sm-12"></div>
-                        <div class="col-sm-12"></div>
-                        <div class="col-sm-12"></div>
-                        <div class="col-sm-12"></div>
-                        <div class="col-sm-12"></div>
+                    <div class="row g-0">
+                        <div class="col-12 col-sm-6 col-xl-4 g-3">
+                            <div class="card-body img_portfolio img_cabin"></div>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-xl-4 g-3">
+                            <div class="card-body img_portfolio img_cake"></div>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-xl-4 g-3">
+                            <div class="card-body img_portfolio img_circus"></div>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-xl-4 g-3">
+                            <div class="card-body img_portfolio img_game"></div>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-xl-4 g-3">
+                            <div class="card-body img_portfolio img_safe"></div>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-xl-4 g-3">
+                            <div class="card-body img_portfolio img_submarine"></div>
+                        </div>
                     </div>
                 </div>
             </section>
