--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
     </head>
     <body>
         <header>
-            <div class="row nav_bar"></div>
+            <div class="row nav_bar g-0"></div>
         </header>
 
         <main>
             <section>
                 <div
                     class="container-fluid container_start g-0">
-                    <div class="row g-0">
+                    <div class="row gx-0">
                         <div class="col-12">
-                            <div class="card-body img_start col-12">
+                            <div
+                                class="card-body img_start col-12 d-flex justify-content-center">
+                                <img src="./assets/img/avatar.svg" width="200px">
                             </div>
                         </div>
                     </div>
@@ -35,6 +37,11 @@
             <section>
                 <div class="container-fluid container_portfolio">
                     <div class="row g-0">
+
+                        <h2 class="text-center">PORTFOLIO</h2>
+                        <div></div>
+                        <div></div>
+                        <div></div>
                         <div class="col-12 col-sm-6 col-xl-4 g-3">
                             <div class="card-body img_portfolio img_cabin"></div>
                         </div>
