add section about html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
             integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
             crossorigin="anonymous">
         <!-- Bootstrap -->
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+            integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <!-- Font awesome -->
         <link rel="stylesheet" href="./assets/css/style.css">
         <!-- CSS -->
     </head>
@@ -18,7 +23,7 @@
         <header>
             <div class="row nav_bar g-0"></div>
         </header>
-
+        <!-- Header -->
         <main>
             <section>
                 <div
@@ -33,37 +38,67 @@
                     </div>
                 </div>
             </section>
-
+            <!-- Section start -->
             <section>
                 <div class="container-fluid container_portfolio">
-                    <div class="row g-0">
+                    <div class="row ">
 
                         <h2 class="text-center">PORTFOLIO</h2>
                         <div></div>
                         <div></div>
                         <div></div>
-                        <div class="col-12 col-sm-6 col-xl-4 g-3">
+                        <div
+                            class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-4 g-3">
                             <div class="card-body img_portfolio img_cabin"></div>
                         </div>
-                        <div class="col-xs-12 col-sm-6 col-xl-4 g-3">
+                        <div class="col-xs-12 col-sm-6 col-md-6 col-xl-4 g-3">
                             <div class="card-body img_portfolio img_cake"></div>
                         </div>
-                        <div class="col-xs-12 col-sm-6 col-xl-4 g-3">
+                        <div
+                            class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-4 g-3">
                             <div class="card-body img_portfolio img_circus"></div>
                         </div>
-                        <div class="col-xs-12 col-sm-6 col-xl-4 g-3">
+                        <div
+                            class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-4 g-3">
                             <div class="card-body img_portfolio img_game"></div>
                         </div>
-                        <div class="col-xs-12 col-sm-6 col-xl-4 g-3">
+                        <div
+                            class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-4 g-3">
                             <div class="card-body img_portfolio img_safe"></div>
                         </div>
-                        <div class="col-xs-12 col-sm-6 col-xl-4 g-3">
+                        <div
+                            class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-4 g-3">
                             <div class="card-body img_portfolio img_submarine"></div>
                         </div>
                     </div>
                 </div>
             </section>
-            <section></section>
+            <!-- Section portfolio -->
+            <section>
+                <div class="container-fluid container_about gy-3">
+                    <div class="row row-cols-12">
+                        <h2 class="text-center">ABAUT</h2>
+                        <div class="col-12 col-sm-6">Freelancer is a free
+                            bootstrap theme created by Start Bootstrap. The
+                            download includes the complete source files
+                            including HTML, CSS, and JavaScript as well as
+                            optional LESS stylesheets for easy customization.
+                        </div>
+                        <div class="col-12 col-sm-6">Whether you're a student
+                            looking to showcase your work, a professional
+                            looking to attract clients, or graphic artist
+                            looking to share yuor projects, this template is the
+                            perfect starting point!
+                        </div>
+                        <div class="col-4">
+                            <button class="btn btn-outline-light"><i
+                                    class="fa-solid fa-download"></i>Download
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- Section about -->
             <section></section>
         </main>
 
