add section contact me

--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
                                 class="card-body img_start col-12 d-flex justify-content-center">
                                 <img src="./assets/img/avatar.svg" width="200px">
                             </div>
+                            <h1 class="text-center">START BOOTSTRAP</h1>
+                            <div
+                                class="col-4 d-flex align-items-center justify-content-center offset-4 line_star">
+                                <div class="left_line"></div>
+                                <i class="fa-solid fa-star"></i>
+                                <div class="right_line"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -41,12 +48,15 @@
             <!-- Section start -->
             <section>
                 <div class="container-fluid container_portfolio">
+                    <h2 class="text-center">PORTFOLIO</h2>
+                    <div
+                        class="col-4 d-flex align-items-center justify-content-center offset-4 line_star">
+                        <div class="left_line"></div>
+                        <i class="fa-solid fa-star"></i>
+                        <div class="right_line"></div>
+                    </div>
                     <div class="row ">
 
-                        <h2 class="text-center">PORTFOLIO</h2>
-                        <div></div>
-                        <div></div>
-                        <div></div>
                         <div
                             class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-4 g-3">
                             <div class="card-body img_portfolio img_cabin"></div>
@@ -78,6 +88,12 @@
                 <div class="container-fluid container_about gy-3">
                     <div class="row row-cols-12">
                         <h2 class="text-center">ABAUT</h2>
+                        <div
+                            class="col-4 d-flex align-items-center justify-content-center offset-4 line_star">
+                            <div class="left_line"></div>
+                            <i class="fa-solid fa-star"></i>
+                            <div class="right_line"></div>
+                        </div>
                         <div class="col-12 col-sm-6">Freelancer is a free
                             bootstrap theme created by Start Bootstrap. The
                             download includes the complete source files
@@ -99,7 +115,23 @@
                 </div>
             </section>
             <!-- Section about -->
-            <section></section>
+            <section>
+                <div class="container-fluid container_me">
+                    <div class="row">
+                        <h2 class="text-center">CONTACT ME</h2>
+                        <div
+                            class="col-4 d-flex align-items-center justify-content-center offset-4 line_star">
+                            <div class="left_line"></div>
+                            <i class="fa-solid fa-star"></i>
+                            <div class="right_line"></div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </section>
+            <!-- Section contact me -->
         </main>
 
         <footer>
