--- a/index.html
+++ b/index.html
@@ -125,16 +125,37 @@
                             <i class="fa-solid fa-star"></i>
                             <div class="right_line"></div>
                         </div>
-
                     </div>
-
                 </div>
-
             </section>
             <!-- Section contact me -->
         </main>
-
         <footer>
+            <div class="container-fluid container_footer">
+                <div class="row row_top">
+                    <div class="col-12 col-sm-4 text-center">
+                        <h4>LOCATION</h4>
+                        <h6>2215 John Daniel Drive Clark, MO
+                            <br> 54243</h6>
+                    </div>
+                    <div class="col-12 col-sm-4 text-center">
+                        <h4>AROUND THE WEB</h4>
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-google-plus-g"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-linkedin-in"></i>
+                    </div>
+                    <div class="col-12 col-sm-4 text-center">
+                        <h4>ABOUT FREELANCER</h4>
+                        <h6>Freelance is a free to use, open source <br>
+                            Bootstrap theme created by <a href="#">Start
+                                Bootstrap</a>.</h6>
+                    </div>
+                </div>
+                <div class="row row_bottom d-flex text-center">
+                    <p>Copyright ©️ Your Website 2019</p>
+                </div>
+            </div>
 
         </footer>
         <script
