--- a/index.html
+++ b/index.html
@@ -136,14 +136,21 @@
                     <div class="col-12 col-sm-4 text-center">
                         <h4>LOCATION</h4>
                         <h6>2215 John Daniel Drive Clark, MO
-                            <br> 54243</h6>
+                            <br> 54243
+                        </h6>
                     </div>
                     <div class="col-12 col-sm-4 text-center">
                         <h4>AROUND THE WEB</h4>
-                        <i class="fa-brands fa-facebook-f"></i>
-                        <i class="fa-brands fa-google-plus-g"></i>
-                        <i class="fa-brands fa-twitter"></i>
-                        <i class="fa-brands fa-linkedin-in"></i>
+                        <div class="d-flex justify-content-center cb-icons">
+                            <div class="cb-icon cb-facebook"><i
+                                    class="fa-brands fa-facebook-f"></i></div>
+                            <div class="cb-icon cb-google-p"><i
+                                    class="fa-brands fa-google-plus-g"></i></div>
+                            <div class="cb-icon cb-twitter"><i
+                                    class="fa-brands fa-twitter"></i></div>
+                            <div class="cb-icon cb-linkedin"><i
+                                    class="fa-brands fa-linkedin-in"></i></div>
+                        </div>
                     </div>
                     <div class="col-12 col-sm-4 text-center">
                         <h4>ABOUT FREELANCER</h4>
@@ -152,11 +159,12 @@
                                 Bootstrap</a>.</h6>
                     </div>
                 </div>
+                <!-- Footer top -->
                 <div class="row row_bottom d-flex text-center">
                     <p>Copyright ©️ Your Website 2019</p>
                 </div>
             </div>
-
+            <!-- Footer bottom -->
         </footer>
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
