--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
                                 <i class="fa-solid fa-star"></i>
                                 <div class="right_line"></div>
                             </div>
+                            <h4 class="text-center">GRAPHIC ARTIST-WEB
+                                DESIGNER-ILLUSTRATOR</h4>
                         </div>
                     </div>
                 </div>
