--- a/index.html
+++ b/index.html
@@ -21,7 +21,42 @@
     </head>
     <body>
         <header>
-            <div class="row nav_bar g-0"></div>
+            <nav class="navbar navbar-expand-sm cb_nav_bg px-0 px-sm-2 px-lg-5">
+                <div class="container-fluid g-2 mx-lg-5">
+                    <a class="navbar-brand" href="#"><h4 class="cb_white_cr"><strong>START
+                                BOOTSTRAP</strong></h4></a>
+                    <button class="navbar-toggler cb_bs_white " type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span
+                            class="navbar-toggler-icon cb_white_bg"></span>
+                    </button>
+                    <div class="collapse navbar-collapse"
+                        id="navbarSupportedContent">
+                        <ul
+                            class="navbar-nav align-items-baseline ms-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page"
+                                    href="#"><h6 class="cb_white_cr">PORTFOLIO</h6></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#"><h6
+                                        class="cb_white_cr">ABOUT</h6></a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link" href="#"
+                                    role="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false"><h6
+                                        class="cb_white_cr">
+                                        CONTACT</h6>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
         </header>
         <!-- Header -->
         <main>
