--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
                             <h1 class="text-center">START BOOTSTRAP</h1>
                             <div
                                 class="col-4 d-flex align-items-center justify-content-center offset-4 line_star">
-                                <div class="left_line"></div>
+                                <div class="left_line color_white"></div>
                                 <i class="fa-solid fa-star"></i>
-                                <div class="right_line"></div>
+                                <div class="right_line  color_white"></div>
                             </div>
                             <h4 class="text-center">GRAPHIC ARTIST-WEB
                                 DESIGNER-ILLUSTRATOR</h4>
@@ -95,26 +95,26 @@
                     <div class="row ">
 
                         <div
-                            class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-4 g-3">
+                            class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-4">
                             <div class="card-body img_portfolio img_cabin"></div>
                         </div>
-                        <div class="col-xs-12 col-sm-6 col-md-6 col-xl-4 g-3">
+                        <div class="col-xs-12 col-sm-6 col-md-6 col-xl-4">
                             <div class="card-body img_portfolio img_cake"></div>
                         </div>
                         <div
-                            class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-4 g-3">
+                            class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-4">
                             <div class="card-body img_portfolio img_circus"></div>
                         </div>
                         <div
-                            class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-4 g-3">
+                            class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-4">
                             <div class="card-body img_portfolio img_game"></div>
                         </div>
                         <div
-                            class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-4 g-3">
+                            class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-4">
                             <div class="card-body img_portfolio img_safe"></div>
                         </div>
                         <div
-                            class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-4 g-3">
+                            class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-4">
                             <div class="card-body img_portfolio img_submarine"></div>
                         </div>
                     </div>
@@ -127,9 +127,9 @@
                         <h2 class="text-center">ABAUT</h2>
                         <div
                             class="col-4 d-flex align-items-center justify-content-center offset-4 line_star">
-                            <div class="left_line"></div>
+                            <div class="left_line  color_white"></div>
                             <i class="fa-solid fa-star"></i>
-                            <div class="right_line"></div>
+                            <div class="right_line  color_white"></div>
                         </div>
                         <div class="col-12 col-sm-6">Freelancer is a free
                             bootstrap theme created by Start Bootstrap. The
@@ -161,6 +161,34 @@
                             <div class="left_line"></div>
                             <i class="fa-solid fa-star"></i>
                             <div class="right_line"></div>
+
+                        </div>
+                        <div class="mb-3">
+                            <input type="text"
+                                class="form-control border-0 border-bottom rounded-0"
+                                id="formGroupExampleInput"
+                                placeholder="Name">
+                        </div>
+                        <div class="mb-3">
+                            <input type="text"
+                                class="form-control  border-0 border-bottom rounded-0"
+                                id="formGroupExampleInput2"
+                                placeholder="Email Address">
+                        </div>
+                        <div class="mb-3">
+                            <input type="text"
+                                class="form-control  border-0 border-bottom rounded-0"
+                                id="formGroupExampleInput2"
+                                placeholder="Phone Number">
+                        </div>
+                        <div class="mb-3">
+                            <input type="text"
+                                class="form-control  border-0 border-bottom rounded-0 cb_message_p"
+                                id="formGroupExampleInput2"
+                                placeholder="Message">
+                        </div>
+                        <div class="col-1">
+                            <button class="btn btn-success">Send</button>
                         </div>
                     </div>
                 </div>
