--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
                         </div>
                         <div
                             class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-4">
-                            <div class="card-body img_portfolio img_submarine"></div>
+                            <div
+                                class="card-body img_portfolio img_submarine"></div>
                         </div>
                     </div>
                 </div>
@@ -131,19 +132,25 @@
                             <i class="fa-solid fa-star"></i>
                             <div class="right_line  color_white"></div>
                         </div>
-                        <div class="col-12 col-sm-6">Freelancer is a free
-                            bootstrap theme created by Start Bootstrap. The
-                            download includes the complete source files
-                            including HTML, CSS, and JavaScript as well as
-                            optional LESS stylesheets for easy customization.
+                        <div class="col-12 col-sm-6">
+                            <p>Freelancer is a free
+                                bootstrap theme created by Start Bootstrap. The
+                                download includes the complete source files
+                                including HTML, CSS, and JavaScript as well as
+                                optional LESS stylesheets for easy
+                                customization.
+                            </p>
                         </div>
-                        <div class="col-12 col-sm-6">Whether you're a student
-                            looking to showcase your work, a professional
-                            looking to attract clients, or graphic artist
-                            looking to share yuor projects, this template is the
-                            perfect starting point!
+                        <div class="col-12 col-sm-6">
+                            <p>Whether you're a student
+                                looking to showcase your work, a professional
+                                looking to attract clients, or graphic artist
+                                looking to share yuor projects, this template is
+                                the
+                                perfect starting point!
+                            </p>
                         </div>
-                        <div class="col-4">
+                        <div class="col-4 d-flex">
                             <button class="btn btn-outline-light"><i
                                     class="fa-solid fa-download"></i>Download
                             </button>
