--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
                             <div class="card-body img_portfolio img_cabin"></div>
                         </div>
                         <div class="col-xs-12 col-sm-6 col-md-6 col-xl-4">
-                            <div class="card-body img_portfolio img_cake"></div>
+                            <div class="card-body img_portfolio img_cake"><img
+                                    src="./assets/" alt></div>
                         </div>
                         <div
                             class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-4">
@@ -125,7 +126,7 @@
             <section>
                 <div class="container-fluid container_about gy-3">
                     <div class="row row-cols-12">
-                        <h2 class="text-center">ABAUT</h2>
+                        <h2 class="text-center">ABOUT</h2>
                         <div
                             class="col-4 d-flex align-items-center justify-content-center offset-4 line_star">
                             <div class="left_line  color_white"></div>
@@ -150,7 +151,7 @@
                                 perfect starting point!
                             </p>
                         </div>
-                        <div class="col-4 d-flex">
+                        <div class="col-12">
                             <button class="btn btn-outline-light"><i
                                     class="fa-solid fa-download"></i>Download
                             </button>
@@ -195,7 +196,7 @@
                                 placeholder="Message">
                         </div>
                         <div class="col-1">
-                            <button class="btn btn-success">Send</button>
+                            <button class="btn btn btn-success">Send</button>
                         </div>
                     </div>
                 </div>
