--- a/index.html
+++ b/index.html
@@ -39,14 +39,15 @@
                             class="navbar-nav align-items-baseline ms-auto mb-2 mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page"
-                                    href="#"><h6 class="cb_white_cr">PORTFOLIO</h6></a>
+                                    href="#section_portfolio"><h6
+                                        class="cb_white_cr">PORTFOLIO</h6></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#"><h6
+                                <a class="nav-link" href="#section_about"><h6
                                         class="cb_white_cr">ABOUT</h6></a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link" href="#"
+                                <a href="#section_me" class="nav-link"
                                     role="button" data-bs-toggle="dropdown"
                                     aria-expanded="false"><h6
                                         class="cb_white_cr">
@@ -60,7 +61,7 @@
         </header>
         <!-- Header -->
         <main>
-            <section>
+            <section id="section_start">
                 <div
                     class="container-fluid container_start g-0">
                     <div class="row gx-0">
@@ -83,7 +84,7 @@
                 </div>
             </section>
             <!-- Section start -->
-            <section>
+            <section id="section_portfolio">
                 <div class="container-fluid container_portfolio">
                     <h2 class="text-center">PORTFOLIO</h2>
                     <div
@@ -123,7 +124,7 @@
                 </div>
             </section>
             <!-- Section portfolio -->
-            <section>
+            <section id="section_about">
                 <div class="container-fluid container_about gy-3">
                     <div class="row row-cols-12">
                         <h2 class="text-center">ABOUT</h2>
@@ -160,7 +161,7 @@
                 </div>
             </section>
             <!-- Section about -->
-            <section>
+            <section id="section_me">
                 <div class="container-fluid container_me">
                     <div class="row">
                         <h2 class="text-center">CONTACT ME</h2>
@@ -190,10 +191,10 @@
                                 placeholder="Phone Number">
                         </div>
                         <div class="mb-3">
-                            <input type="text"
-                                class="form-control  border-0 border-bottom rounded-0 cb_message_p"
-                                id="formGroupExampleInput2"
-                                placeholder="Message">
+                            <textarea
+                                class="form-control border-0 border-bottom rounded-0 cb_height"
+                                id="exampleFormControlTextarea1"
+                                rows="3">Message</textarea>
                         </div>
                         <div class="col-1">
                             <button class="btn btn btn-success">Send</button>
@@ -239,6 +240,7 @@
             </div>
             <!-- Footer bottom -->
         </footer>
+        <!-- JavaScript -->
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
